[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[metadata]
name = ba_tools
version = attr: ba_tools.__version__
author = Artur Glavic
author_email = artur.glavic@psi.ch
description = Support library for BornAgain GISAS modeling software
long_description = file: README.rst
url = https://github.com/aglavic/ba_tools
license = MIT
license-file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering
    Development Status :: 3 - Alpha

[options]
python_requires = >=3.9
packages = find:
install_requires =
#include_package_data = True

#[options.package_data]
